# django-rest-framework-datatables

./: .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  README.rst  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
docs/: Makefile  changelog.rst  conf.py  django-filters.rst  example-app.rst  index.rst  introduction.rst  make.bat  quickstart.rst  tutorial.rst
example/: db.sqlite3  manage.py
example/albums/: admin.py  models.py  serializers.py  views.py
example/albums/fixtures/: test_data.json
example/albums/migrations/: 0001_initial.py  0002_auto_20210720_2132.py  0003_add_BigAutoField.py
example/albums/static/css/: jquery.dataTables.yadcf.css
example/albums/static/js/: jquery.dataTables.yadcf.js
example/albums/templates/albums/: albums.html  base.html
example/example/: settings.py  urls.py  wsgi.py
example/pg/: docker-compose.yml
example/pg/docker/db/: init-user-db.sh
example/scripts/: create_albums.py
example/static/css/: editor.bootstrap.css  editor.bootstrap4.css  editor.bootstrap4.min.css  editor.dataTables.css  editor.dataTables.min.css  editor.foundation.css  editor.jqueryui.css  editor.semanticui.css
example/static/js/: dataTables.editor.min.js  datatables.js  editor.bootstrap.js  editor.bootstrap.min.js  editor.bootstrap4.js  editor.bootstrap4.min.js  editor.semanticui.js  editor.semanticui.min.js
rest_framework_datatables/: filters.py  pagination.py  renderers.py  serializers.py  utils.py  viewsets.py
rest_framework_datatables/django_filters/: backends.py  filters.py  filterset.py
tests/: test_api.py  test_django_filter_backend.py  test_django_filter_filterset.py  test_editor.py  test_filter.py  test_renderers.py
